make the cancel alert fixed instead of absolute, to be visible while scrolling

--- a/public/modules/_core/assets/corescss/_layout.scss
+++ b/public/modules/_core/assets/corescss/_layout.scss
@@ -84,10 +84,12 @@
 	}
 	
 	.cancel-alert {
-		position: absolute !important;
+		position: fixed !important;
 		top: 70px;
 		height: 50px;
 		box-shadow: 2px 2px 5px #aaa;
+		cursor: pointer;
+		z-index: 10000;
 	}
 	
 /* --------------------  OLD --------------------  */
